Reworked controller to instantiate sensor.ControllerID from config.options

--- a/custom_components/uhppoted/translations/en.json
+++ b/custom_components/uhppoted/translations/en.json
@@ -112,15 +112,8 @@
 
     "entity": {
         "sensor": {
-            "uhppote": {
-                "controller_id": {
-                    "name": "THING"
-                }
-            },
             "uhppoted": {
-                "controller_id": {
-                    "name": "THINGX"
-                }
+                "controller_id": "THINGX",
             },
             "controller_id": {
                 "name": "THINGQ"
