(finally) basic working reconfigurable options flow

--- a/custom_components/uhppoted/translations/en.json
+++ b/custom_components/uhppoted/translations/en.json
@@ -113,7 +113,7 @@
     "entity": {
         "sensor": {
             "uhppoted": {
-                "controller_id": "THINGX",
+                "controller_id": "THINGX"
             },
             "controller_id": {
                 "name": "THINGQ"
