--- a/custom_components/uhppoted/translations/en.json
+++ b/custom_components/uhppoted/translations/en.json
@@ -54,6 +54,16 @@
                 }
             },
 
+            "doors": {
+                "title": "Doors for controller {controller}",
+                "data": {
+                    "doors": "Select the doors to include:"
+                },
+                "data_description": {
+                    "doors": "Doors managed by controller {serial_no}"
+                }
+            },
+
             "door": {
                 "title": "Controller door configuration",
                 "description": "Adds door to list of managed doors",
