Adding controller events listener address to config-flow (cf. https://github.com/uhppoted/uhppoted-app-home-assistant/issues/1)

--- a/custom_components/uhppoted/translations/en.json
+++ b/custom_components/uhppoted/translations/en.json
@@ -27,6 +27,17 @@
                 }
             },
 
+            "events": {
+                "title": "UHPPOTE IPv4 - events configuration",
+                "description": "Network settings for controller events",
+                "data": {
+                    "events_destination_address": "controller events listener address (optional)"
+                },
+                "data_description": {
+                    "events_destination_address": "The destination IPv4 address for controller events e.g. 192.168.1.100:60001'"
+                }
+            },
+
             "controllers": {
                 "title": "UHPPOTE controllers list",
                 "data": {
