Replaced Gryffindor, et al default door names for upcoming alpha release

--- a/custom_components/uhppoted/translations/en.json
+++ b/custom_components/uhppoted/translations/en.json
@@ -283,7 +283,7 @@
     "entity": {
         "sensor": {
             "controller_id": {
-                "name": "WOOOOOOT"
+                "name": "test entity name translation"
             }
         }
     },
@@ -292,7 +292,7 @@
         "_": {
             "state_attributes": {
                 "event_listener": {
-                    "name": "QWERTY"
+                    "name": "test attr name translation"
                 }
             }
         }
